solved right scrollbar

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,6 @@
 .bodyContent {
     height: 100%;
-    background: url('https://picsum.photos/1280/768');
+    background: url('https://picsum.photos/1920/1080');
     background-size: cover;
     background-position: center;
     justify-content: center;
