--- a/frontend/src/Components/Contents/Boards/Boards.css
+++ b/frontend/src/Components/Contents/Boards/Boards.css
@@ -132,7 +132,7 @@
     grid-gap: 10px;
     border-radius: 5px;
     padding: 10px;
-    height: 100%;
+    height: 95%;
     justify-content: center;
 }
 
